--- a/MastercopyBackend/src/main/resources/application.properties
+++ b/MastercopyBackend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=Mastercopy
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb://localhost:27017/mastercopy
 spring.data.mongodb.database=mastercopy
